--- a/SeKAD/public/about.html
+++ b/SeKAD/public/about.html
@@ -53,7 +53,7 @@
             <div class="navbar-nav ms-auto p-4 p-lg-0">
                 <a href="index.html" class="nav-item nav-link">Hoijijijime</a>
                 <a href="about.html" class="nav-item nav-link active">About</a>
-                <a href="attendanceRecord1.php" class="nav-item nav-link active">Setting</a>
+                <a href="attendanceRecord1.blade.php" class="nav-item nav-link active">Setting</a>
                 <a href="courses.html" class="nav-item nav-link">Courses</a>
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
